--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SIMBELMAWA Educational - Data Lowongan Magang (For Learning)</title>
+    <title>MBER (Magang Berdampak)</title>
     <meta
       name="description"
-      content="Educational version of SIMBELMAWA dashboard for learning React.js and modern web development. Not affiliated with official SIMBELMAWA system."
+      content="MBER (Magang Berdampak) adalah portal magang yang menghubungkan mahasiswa dengan perusahaan untuk pengalaman belajar yang berharga. Dapatkan kesempatan magang yang sesuai dengan minat dan keahlian Anda."
     />
     <meta
       name="keywords"
